# citra

./: .gitmodules  CMakeLists.txt  appveyor.yml  citra.nuspec
CMakeModules/: GenerateSCMRev.cmake
src/audio_core/: CMakeLists.txt  dsp_interface.cpp
src/audio_core/hle/: source.cpp
src/citra/: citra.cpp
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  compatdb.cpp  main.cpp  main.h
src/citra_qt/applets/: swkbd.cpp
src/citra_qt/camera/: qt_camera_base.cpp
src/citra_qt/configuration/: config.cpp  configure_graphics.cpp  configure_input.cpp  configure_motion_touch.cpp  configure_system.cpp  configure_web.cpp
src/citra_qt/debugger/: profiler.cpp
src/citra_qt/debugger/graphics/: graphics_tracing.cpp
src/citra_qt/multiplayer/: message.cpp  state.cpp
src/citra_qt/util/: sbs_dialog.cpp  sbs_dialog.h
src/common/: CMakeLists.txt  announce_multiplayer_room.h  common_paths.h  crash_handler.cpp  file_util.cpp  file_util.h  linear_disk_cache.h  math_util.h  profiler_reporting.h  scm_rev.cpp.in
src/core/: CMakeLists.txt  core.cpp  core.h  core_timing.h  memory.cpp  settings.cpp  settings.h
src/core/dumping/: backend.h  ffmpeg_backend.cpp  ffmpeg_backend.h
src/core/file_sys/: cia_container.cpp  ncch_container.cpp  title_metadata.cpp
src/core/frontend/: emu_window.h  framebuffer_layout.cpp  scope_acquire_window_context.cpp  scope_acquire_window_context.h  video_presentation.h
src/core/hle/: shared_page.h
src/core/hle/service/gsp/: gsp_gpu.h
src/core/hle/service/ns/: ns.cpp
src/core/hle/service/nwm/: nwm_uds.cpp
src/core/hw/: gpu.cpp
src/core/hw/aes/: 3ds_ccm.cpp  3ds_ccm.h
src/dedicated_room/: CMakeLists.txt
src/input_common/sdl/: sdl.cpp
src/tests/: CMakeLists.txt  test_a.cpp
src/video_core/: CMakeLists.txt  command_processor.cpp  command_processor.h  gpu.cpp  gpu.h  gpu_thread.cpp  gpu_thread.h  pica_state.h  renderer_base.cpp  renderer_base.h  video_core.cpp  video_core.h
src/video_core/renderer_opengl/: gl_format_converter.cpp  gl_format_converter.h  gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_shader_thread.cpp  gl_shader_thread.h  gl_shader_util.cpp  gl_shader_util.h  gl_state.cpp  renderer_opengl.cpp  renderer_opengl.h  video_presentation.cpp
src/video_core/shader/: shader.h
src/web_service/: CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  announce_room_json.cpp  announce_room_json.h
